2007-06-04  Titus Brown  <t@iorich.caltech.edu>

	* Updated mechanize to latest.

	* Patched subprocess pipe freeing problem (Chris Abraham).  (This
	  is a moderately serious bug for long-running programs that use
	  subprocess to try to run programs that don't exist.)

	  My patch modifies run_tidy to remember if subprocess failed because
	  tidy didn't exist.

2007-05-28  Titus Brown  <t@iorich.caltech.edu>

	* Added 'info' command, docs, and tests.

	* Removed gopherlib references in mechanize; added test.

2007-03-19  Titus Brown  <t@localhost.localdomain>

	* Fixed bug in my patch to mechanize 'select_form'.

	* Removed debug 'print' in wsgi_intercept.py.

2007-03-06  Titus Brown  <t@localhost.localdomain>

	* RELEASE 0.9b1.

	* Changed version to 0.9b1.

	* Fixed global_form selection on form set (Matt Singer).

2007-02-18  Titus Brown  <t@localhost.localdomain>

	* Added paste.lint tests into wsgi_intercept test code; fixed
	  only problem noted.

2007-02-15  Titus Brown  <t@localhost.localdomain>

	* Fixed browser.get_form to only allow valid form numbers (Mariusz).

	* Fixed showforms to properly display form numbers (Mariusz).

2007-02-14  Titus Brown  <t@localhost.localdomain>

	* Added a basic check for Web server to tests: tests no longer
	  run if the test Web server isn't available.

	* Added get_browser() to twill.commands exports.

2007-02-08  Titus Brown  <t@localhost.localdomain>

	* Global forms no longer show up IF EMPTY.

2007-02-04  Titus Brown  <t@localhost.localdomain>

	* Switched to MIT license.

2007-01-29  Titus Brown  <t@localhost.localdomain>

	* Removed BeautifulSoup.py in favor of the one included with
	  mechanize.

	* Added pages 'show_environ' and 'show_post' to twilltestserver.

	* Added commands 'add_extra_header', 'show_extra_headers', and
	  'clear_extra_headers', + tests & docs.  (Shaun Walbridge)

	* Always display proper form number in showforms.

2007-01-24  Titus Brown  <t@localhost.localdomain>
