@@ -1,3 +1,10 @@
+2007-07-01  C. Titus Brown  <t@chreotha>
+
+	* Eliminated FakeResponse and switched to using
+	  mechanize.make_response (Jacob Hallan, JJL).
+
+	* Updated mechanize to latest; includes my two patches to mechanize.
+
 2007-06-04  Titus Brown  <t@iorich.caltech.edu>
 
 	* Updated mechanize to latest.
